apps/on-prem/core/monitoring/monitoring/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kube-state-metrics-httproute
  namespace: monitoring
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
  hostnames:
  - kube-state-metrics.binarybraids.com
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
      - kind: Service
        name: monitoring-kube-state-metrics
        namespace: monitoring
        port: 8080
